force-app/main/default/objects/Mat_Talentos__c/Mat_Talentos__c.object-meta.xml
<CustomObject>
    <description>Objeto personalizado para almacenar información básica de los talentos.</description>
    <label>Talento</label>
    <nameField>
        <label>Nombre de Talento:</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Talentos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>