force-app/main/default/objects/Mat_Talentos__c/fields/Mat_12_17__c.field-meta.xml
<CustomField>
    <fullName>Mat_12_17__c</fullName>
    <label>12-17</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>