force-app/main/default/objects/Mat_Talentos__c/fields/Mat_18_24__c.field-meta.xml
<CustomField>
    <fullName>Mat_18_24__c</fullName>
    <label>18-24</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>