force-app/main/default/objects/Mat_Talentos__c/fields/Mat_25_34__c.field-meta.xml
<CustomField>
    <fullName>Mat_25_34__c</fullName>
    <label>25-34</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>