force-app/main/default/objects/Mat_Talentos__c/fields/Mat_Agencia__c.field-meta.xml
<CustomField>
    <fullName>Mat_Agencia__c</fullName>
    <label>Agencia</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Agencias</valueSetName>
    </valueSet>
</CustomField>