force-app/main/default/objects/Mat_Talentos__c/fields/Mat_Categoria__c.field-meta.xml
<CustomField>
    <fullName>Mat_Categoria__c</fullName>
    <label>Categoría</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Morado</fullName>
            </value>
            <value>
                <fullName>Amarillo</fullName>
            </value>
            <value>
                <fullName>Negro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>