force-app/main/default/objects/Mat_Talentos__c/fields/Mat_Ciudad__c.field-meta.xml
<CustomField>
    <fullName>Mat_Ciudad__c</fullName>
    <label>Ciudad</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Mat_Ciudad</valueSetName>
    </valueSet>
</CustomField>