force-app/main/default/objects/Mat_Talentos__c/fields/Mat_Descripcion__c.field-meta.xml
<CustomField>
    <fullName>Mat_Descripcion__c</fullName>
    <label>Descripción</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>