force-app/main/default/objects/Mat_Talentos__c/fields/Mat_EngagementRate__c.field-meta.xml
<CustomField>
    <fullName>Mat_EngagementRate__c</fullName>
    <label>Engagement Rate</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>