force-app/main/default/objects/Mat_Talentos__c/fields/Mat_Femenino__c.field-meta.xml
<CustomField>
    <fullName>Mat_Femenino__c</fullName>
    <label>Femenino</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>