force-app/main/default/objects/Mat_Talentos__c/fields/Mat_Instagram__c.field-meta.xml
<CustomField>
    <fullName>Mat_Instagram__c</fullName>
    <label>Instagram</label>
    <type>Url</type>
</CustomField>