force-app/main/default/objects/Mat_Talentos__c/fields/Mat_Manager__c.field-meta.xml
<CustomField>
    <fullName>Mat_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Talentos</relationshipName>
    <type>Lookup</type>
</CustomField>