force-app/main/default/objects/Mat_Talentos__c/fields/Mat_Notas__c.field-meta.xml
<CustomField>
    <fullName>Mat_Notas__c</fullName>
    <label>Notas</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>