force-app/main/default/objects/Mat_Talentos__c/fields/Mat_Otro_pais__c.field-meta.xml
<CustomField>
    <fullName>Mat_Otro_pais__c</fullName>
    <label>Otro país</label>
    <length>40</length>
    <type>Text</type>
</CustomField>