force-app/main/default/objects/Mat_Talentos__c/fields/Mat_Pais__c.field-meta.xml
<CustomField>
    <fullName>Mat_Pais__c</fullName>
    <label>País</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Mat_Pais</valueSetName>
    </valueSet>
</CustomField>