force-app/main/default/objects/Mat_Talentos__c/fields/Mat_Seguidores_Instagram__c.field-meta.xml
<CustomField>
    <fullName>Mat_Seguidores_Instagram__c</fullName>
    <label>Seguidores Instagram</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>