force-app/main/default/objects/Mat_Talentos__c/fields/Mat_Slack_canal_ID__c.field-meta.xml
<CustomField>
    <fullName>Mat_Slack_canal_ID__c</fullName>
    <label>ID canal Slack</label>
    <length>255</length>
    <type>Text</type>
</CustomField>