force-app/main/default/objects/Mat_Talentos__c/fields/Mat_TikTok__c.field-meta.xml
<CustomField>
    <fullName>Mat_TikTok__c</fullName>
    <label>TikTok</label>
    <type>Url</type>
</CustomField>