force-app/main/default/objects/Mat_Talentos__c/fields/Mat_TipoDeTalento__c.field-meta.xml
<CustomField>
    <fullName>Mat_TipoDeTalento__c</fullName>
    <label>Tipo de talento</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>