force-app/main/default/objects/Mat_Talentos__c/fields/Mat_YouTube__c.field-meta.xml
<CustomField>
    <fullName>Mat_YouTube__c</fullName>
    <label>YouTube</label>
    <type>Url</type>
</CustomField>